<resources>
    <string name="app_name">RemindMe</string>
    <string name="search_title">Search</string>
    <string name="menu_item_notification">Напоминание</string>
    <string name="favorites">Избранное</string>
    <string name="archive">Архив</string>
    <string name="settings">Настройки</string>
    <string name="help">Справка</string>
    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_closed">Close</string>

    <string name="tab_item_history">History</string>
    <string name="tab_item_ideas">Ideas</string>
    <string name="tab_item_todo">To do</string>
    <string name="tab_item_birthdays">Birthdays</string>

    <string name="title_activity_main2">Delete</string>


</resources>
